# PixelScrape

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  instructions.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: sonarqube.yml
benchmarks/: benchmark_bencode.cpp  benchmark_lookup.cpp  benchmark_lookup_simple.cpp  benchmark_serialization.cpp
frontend/: index.html
include/: bencode_parser.hpp  dht_client.hpp  dht_node.hpp  dht_protocol.hpp  extension_protocol.hpp  filesystem.hpp  http_server.hpp  json.hpp  logging.hpp  metadata_exchange.hpp  mse_crypto.hpp  network.hpp  peer_connection.hpp  piece_manager.hpp  sha1.hpp  state_manager.hpp  torrent_manager.hpp  torrent_metadata.hpp  tracker_client.hpp  transmission_rpc.hpp  websocket_server.hpp
src/: main.cpp  torrent_manager.cpp
src/api/: http_server.cpp  transmission_rpc.cpp  websocket_server.cpp
src/bencode/: parser.cpp
src/crypto/: mse_crypto.cpp  sha1.cpp
src/dht/: client.cpp  node.cpp  protocol.cpp
src/manager/: connection_worker.cpp  lifecycle.cpp  manager.hpp  operations.cpp  peer_worker.cpp  status.cpp  tcp_listener.cpp  tracker_worker.cpp  utils.cpp
src/metadata/: exchange.cpp
src/peer/: connection.cpp  extension_protocol.cpp  metadata_exchange.cpp
src/storage/: piece_manager.cpp  state_manager.cpp
src/torrent/: metadata.cpp
src/tracker/: client.cpp
tests/: test_extension_protocol.cpp
tools/: dummy_peer.py
